# particles-behavior

./: CMakeLists.txt  main.c  particle.c  readme.md  situations.c  square.c  window.c
headers/: all_particles.h  all_squares.h  constants.h  particle.h  situations.h  square.h  window.h
storage/: all_particles.c  all_squares.c
